packages/jsii/test/negatives/neg.double-interface-members.ts
export interface A {
  foo: number;
}
export interface B extends A {
  foo: number;
}
